[package]
name = "tripsplit"
version = "0.1.0"
authors = ["Erik Feller <erik.feller@colorado.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
postgres = "0.17.5"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.115", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
